Add first chapter sections.

--- a/notes.tex
+++ b/notes.tex
@@ -12,5 +12,10 @@
 \begin{document}
 \maketitle
 \newpage
-
+\tableofcontents
+\newpage
+\chapter {Wykład I: wstęp do nieskończonych alfabetów}
+\section {Dlaczego warto badać nieskończone alfabety?}
+\section {Znane modele automatów dla słów}
+\section {Definicja niedeterministycznego automatu z rejestrami}
 \end{document}
