Add image witch automaton cllasyfication.

--- a/notes.tex
+++ b/notes.tex
@@ -17,5 +17,12 @@
 \chapter {Wykład I: wstęp do nieskończonych alfabetów}
 \section {Dlaczego warto badać nieskończone alfabety?}
 \section {Znane modele automatów dla słów}
+\begin{figure}
+\begin{center}
+\includegraphics{images/podzial_automatow.png}
+\end{center}
+\caption{Moc wyrazu poszczególnych modeli}
+\end{figure}
+
 \section {Definicja niedeterministycznego automatu z rejestrami}
 \end{document}
