--- a/notes.tex
+++ b/notes.tex
@@ -6,6 +6,8 @@
 \usepackage{amsfonts}
 \usepackage{graphicx}
 
+\newcommand{\data}{\mathbb D}
+
 \title{Notatki z wykładu ,,Nieskończone Alfabety''}
 % jeśli rozwijasz ten dokument, dopisz się do listy autorów
 % porządek autorów powinien być alfabetyczny
@@ -65,7 +67,7 @@ Większość wykładu dotycząca nieskończonych alfabetów będzie poświęcona
 
 Przez większość wykładu prezentowane modele będą rozważały jedynie równość elementów z nieskończonego alfabetu. Alfabet nie musi mieć zatem żadnej narzuconej struktury.
 
-Def. niech A będzie skończonym zbiorem ,,etykiet'', D - nieskończonym zbiorem danych. Wtedy strukturę $w \in (A x D)^*$ nazywamy ,,słowem z danymi''.
+Def. niech A będzie skończonym zbiorem ,,etykiet'', $\data$ - nieskończonym zbiorem danych. Wtedy strukturę $w \in (A \times \data)^*$ nazywamy ,,słowem z danymi''.
 
 Większość automatów używanych w trakcie wykładu, będzie operować na słowach w postaci zdefiniowanej powyżej.
 
@@ -76,19 +78,19 @@ Większość automatów używanych w trakcie wykładu, będzie operować na sło
 \end{center}
 \caption{Moc wyrazu poszczególnych modeli}
 \end{figure}
-Na potrzeby przykładów przyjmujemy, że $ w \in D^* $
+Na potrzeby przykładów przyjmujemy, że $ w \in \data^* $
 
 $L_1$ = ,,pierwsza litera jest taka sama jak ostatnia litera''
 
-$L_1 = {\bigcup \limits _{d \in D} dD^*d + d}$
+$L_1 = {\bigcup \limits _{d \in \data} d\data^*d + d}$
 
 $L_2$ = ,,pierwsza litera pojawia się ponownie''
 
-$L_2 = {\bigcup \limits _{d \in D} dD^*dD^*}$
+$L_2 = {\bigcup \limits _{d \in \data} d\data^*d\data^*}$
 
 $L_3$ = ,,jakaś litera pojawia się dwukrotnie''
 
-$L_3 = {\bigcup \limits _{d \in D} D^*dD^*dD^*}$
+$L_3 = {\bigcup \limits _{d \in \data} \data^*d\data^*d\data^*}$
 
 \section {Definicja niedeterministycznego automatu z rejestrami}
 Niedeterministyczny automat z rejestrami jest zadawany przez:
@@ -98,10 +100,10 @@ Niedeterministyczny automat z rejestrami jest zadawany przez:
 \item stany początkowe i końcowe $I,F \in Q$
 \item skończony zbiór nazw rejestrów R
 \item relację zadającą przejścia automatu $\delta 
-\in Q x A x 2^R x Q x (R \cup \bot)$
+\in Q \times A \times 2^R \times Q \times (R \cup \bot)$
 \end{itemize}
 
-Konfiguracją automatu jest $(q,r) \in Q x (R \rightharpoondown D)$.
+Konfiguracją automatu jest $(q,r) \in Q \times (R \rightharpoondown \data)$.
 
 \paragraph {Należenie krotki $(q,a,r_1,r_3,p,r_4)$ do relacji przejścia automatu, należy rozumieć jako:} automat będąc w stanie q i czytając etykietę a oraz daną, która jest równa z rejestrami $r_1,r_3$ i nierówna z pozostałymi rejestrami, przechodzi do stanu p i zapisuje czytaną daną do rejestru $r_4$.
 \end{document}
